[metadata]
version = 0.0.1
author = BastelBaus
author_email = bastelbaus@gmail.com
description = Library for Galaxy6D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BastelBaus
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt


[tools.setuptools.packages.find]
where = ["src"]

